# pro2team

./: .gitignore  BaseCgr.cpp  BaseCgr.h  BaseMgr.cpp  BaseMgr.h  BaseScene.cpp  BaseScene.h  Button.cpp  Button.h  ButtonCharge.cpp  ButtonCharge.h  CMakeLists.txt  CatchInput.cpp  CatchInput.h  ClassDiagram.cd  FpsControll.cpp  FpsControll.h  GameCgr.cpp  GameCgr.h  GameMgr.cpp  GameMgr.h  GameScene.cpp  GameScene.h  GameVar.cpp  GameVar.h  Graphic.cpp  Graphic.h  Graphics.cpp  Graphics.h  Item.cpp  Item.h  ItemEye.cpp  ItemEye.h  ItemSelect.cpp  ItemSelect.h  LICENSE  LICENSE(DXlib)  Log.txt  MoveType.cpp  MoveType.h  (+29 more)
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  jekyll-gh-pages.yml  msvc.yml
docs/: _config.yml  index.md  style.scss
dxlib_for_visual_studio/: DxCompileConfig.h  DxDataTypeWin.h  DxFunctionWin.h  DxLib.h
header/: BaseCgr.h  BaseMgr.h  BaseMgr.hpp  BaseScene.h  BaseScene.hpp  Button.h  Button.hpp  ButtonCharge.h  ButtonCharge.hpp  Cake.h  Cake.hpp  CatchInput.h  Container.h  Container.hpp  Ending.h  Ending.hpp  FpsControll.hpp  GameCgr.h  GameMgr.h  GameMgr.hpp  GameScene.h  GameScene.hpp  GameVar.h  GameVar.hpp  GameVarMgr.h  Graphics.h  Graphics.hpp  Item.h  Item.hpp  ItemBasket.h  ItemBasket.hpp  ItemClock.h  ItemClock.hpp  ItemEye.h  ItemEye.hpp  ItemSelect.h  ItemSelect.hpp  MoveType.h  MoveType.hpp  MoveTypeGrad.h  (+25 more)
source/: BaseCgr.cpp  BaseMgr.cpp  BaseScene.cpp  Button.cpp  ButtonCharge.cpp  Cake.cpp  CatchInput.cpp  Container.cpp  Ending.cpp  FpsControll.cpp  GameCgr.cpp  GameMgr.cpp  GameScene.cpp  GameVar.cpp  GameVarMgr.cpp  Graphics.cpp  Item.cpp  ItemBasket.cpp  ItemClock.cpp  ItemEye.cpp  ItemSelect.cpp  MoveType.cpp  MoveTypeGrad.cpp  MoveTypeNormal.cpp  MoveTypeSine.cpp  Movement.cpp  MovementExpand.cpp  MovementI.cpp  MovementMove.cpp  MovementRepetate.cpp  MovementRotate.cpp  Player.cpp  PlayerSelect.cpp  Roulette.cpp  RoulettePlay.cpp  Title.cpp  main.cpp
website/: index.md
